<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".activity.DetailContactActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/Detail.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="Dika Adi Setiawan" />

    <TextView
        android:id="@+id/tv_number"
        style="@style/Detail.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="085771002550" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/Detail.Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number"
        tools:text="masdikaid@gmail.com" />

    <ImageButton
        android:id="@+id/imb_call"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/call_action"
        app:layout_constraintEnd_toStartOf="@+id/imb_share"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:srcCompat="@drawable/ic_baseline_call_20" />

    <ImageButton
        android:id="@+id/imb_share"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/share_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imb_call"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:srcCompat="@drawable/ic_baseline_share_20" />
</android.support.constraint.ConstraintLayout>